fixed bug with price not showing

--- a/src/styles/_work.scss
+++ b/src/styles/_work.scss
@@ -192,6 +192,12 @@
     object-fit: cover;
   }
 
+  &_price {
+    padding: 1em 1em 0 1em;
+    font-size: 1.5em;
+    text-align: right;
+  }
+
   &_content {
     padding: 2em;
   }
